force-app/main/default/objects/APTS_Agreement__c/APTS_Agreement__c.object-meta.xml
<CustomObject>
    <description>Represents an agreement in the system</description>
    <label>Agreement</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>