force-app/main/default/objects/APTS_Agreement__c/fields/Active_oBo123_del__c.field-meta.xml
<CustomField>
    <fullName>Active_oBo123_del__c</fullName>
    <formula>Business_Originator__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delete1</label>
    <type>Checkbox</type>
</CustomField>