force-app/main/default/objects/APTS_Agreement__c/fields/Active_oBo__c.field-meta.xml
<CustomField>
    <fullName>Active_oBo__c</fullName>
    <formula>Business_Originator__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active oBo?</label>
    <type>Checkbox</type>
</CustomField>