force-app/main/default/objects/APTS_Agreement__c/fields/Active_Requestor123_del__c.field-meta.xml
<CustomField>
    <fullName>Active_Requestor123_del__c</fullName>
    <formula>Requestor__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delete</label>
    <type>Checkbox</type>
</CustomField>