force-app/main/default/objects/APTS_Agreement__c/fields/Actively_Being_Negotiated__c.field-meta.xml
<CustomField>
    <fullName>Actively_Being_Negotiated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the Contracts Team is actively working on this contract.</description>
    <inlineHelpText>Check this box if the Contracts Team is actively working on this contract.</inlineHelpText>
    <label>Actively Being Negotiated</label>
    <type>Checkbox</type>
</CustomField>