force-app/main/default/objects/APTS_Agreement__c/fields/Administrative_fees_in__c.field-meta.xml
<CustomField>
    <fullName>Administrative_fees_in__c</fullName>
    <label>Administrative fees (in $)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>