force-app/main/default/objects/APTS_Agreement__c/fields/Administrative_fees_in_percent__c.field-meta.xml
<CustomField>
    <fullName>Administrative_fees_in_percent__c</fullName>
    <label>Administrative fees (in %)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>