force-app/main/default/objects/APTS_Agreement__c/fields/Affiliate_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Pricing__c</fullName>
    <description>Does this Customer have affiliate facilities that will be included under this Agreement?</description>
    <label>Affiliate Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>