force-app/main/default/objects/APTS_Agreement__c/fields/Agmt_Name_Test__c.field-meta.xml
<CustomField>
    <fullName>Agmt_Name_Test__c</fullName>
    <formula>LEFT( Account__r.Name , 60)&amp;&quot;-&quot;&amp; APTS_Record_Type_Short_Name__c &amp; APTS_Amendment_formula__c &amp;&quot;-&quot;&amp; TEXT( Contract_Sub_Type_1__c ) &amp;&quot;-&quot;&amp; Text( DATEVALUE( CreatedDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agmt Name Test</label>
    <type>Text</type>
</CustomField>