force-app/main/default/objects/APTS_Agreement__c/fields/Agreement_Time_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Time_Tracker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement Time Tracker</label>
    <referenceTo>Agreement_Time_Tracker__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>