force-app/main/default/objects/APTS_Agreement__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Study Agreements</fullName>
            </value>
            <value>
                <fullName>OUS Clinical Trial Agreements</fullName>
            </value>
            <value>
                <fullName>Clinical Facility Use Agreements</fullName>
            </value>
            <value>
                <fullName>Educational Grants/Fellowship Agreements</fullName>
            </value>
            <value>
                <fullName>IIS Funding Agreements</fullName>
            </value>
            <value>
                <fullName>Distribution Agreements</fullName>
            </value>
            <value>
                <fullName>Employment Agency Agreements</fullName>
            </value>
            <value>
                <fullName>One-Time Consulting Agreements</fullName>
            </value>
            <value>
                <fullName>Vendor Agreements</fullName>
            </value>
            <value>
                <fullName>Privacy Agreements</fullName>
            </value>
            <value>
                <fullName>Real Estate Agreements</fullName>
            </value>
            <value>
                <fullName>Supply Quality Agreements</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sales and Marketing Agreement</fullName>
            </value>
            <value>
                <fullName>HR Agreements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>