force-app/main/default/objects/APTS_Agreement__c/fields/All_Parties_Signing__c.field-meta.xml
<CustomField>
    <fullName>All_Parties_Signing__c</fullName>
    <description>used in the Docusign process and custom code to determine the status of the Agreement based on # of signers</description>
    <inlineHelpText>Are all parties going to be receiving the contract via Docusign?  Enter &quot;Yes&quot; if the Agreement will come back fully executed from Docusign.</inlineHelpText>
    <label>All Parties Signing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>