force-app/main/default/objects/APTS_Agreement__c/fields/Amendment_Effective_Date_Format__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Effective_Date_Format__c</fullName>
    <formula>CASE( MONTH(Amendment_Effective_Date__c) , 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;&quot;) +&apos; &apos;+ text(DAY(Amendment_Effective_Date__c)) + &apos;,&apos;+&apos; &apos;+ Text(YEAR(Amendment_Effective_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amendment Effective Date Format</label>
    <type>Text</type>
</CustomField>