force-app/main/default/objects/APTS_Agreement__c/fields/Applies_to_Affiliates__c.field-meta.xml
<CustomField>
    <fullName>Applies_to_Affiliates__c</fullName>
    <label>Applies to Affiliates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>