force-app/main/default/objects/APTS_Agreement__c/fields/Approved_by_COO__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_COO__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has Chief Compliance Officer approved?</inlineHelpText>
    <label>Compliance Approval?</label>
    <type>Checkbox</type>
</CustomField>