force-app/main/default/objects/APTS_Agreement__c/fields/APTS_Account_Name_first_60_characters__c.field-meta.xml
<CustomField>
    <fullName>APTS_Account_Name_first_60_characters__c</fullName>
    <formula>LEFT( Account__r.Name , 60)</formula>
    <label>Account Name (first 60 characters)</label>
    <type>Text</type>
</CustomField>