force-app/main/default/objects/APTS_Agreement__c/fields/APTS_Activate__c.field-meta.xml
<CustomField>
    <fullName>APTS_Activate__c</fullName>
    <formula>IF (OR(Workflow_Trigger_Viewed_Final__c = FALSE, Workflow_Trigger_Viewed_Final__c = TRUE),
HYPERLINK(&quot;/apex/AgreementActivate?id=&quot; &amp;Id, IMAGE(&quot;/resource/Button_Activate&quot;, &quot;Activate&quot;),&quot;_self&quot;),NULL)</formula>
    <label>Activate</label>
    <type>Text</type>
</CustomField>