force-app/main/default/objects/APTS_Agreement__c/fields/APTS_Agreement_Owner__c.field-meta.xml
<CustomField>
    <fullName>APTS_Agreement_Owner__c</fullName>
    <description>IF(ISNULL(Owner:Queue.QueueName),Owner:User.FirstName+&quot; &quot;+Owner:User.LastName,Owner:Queue.QueueName)</description>
    <formula>IF(OwnerId = Owner:User.Id, Owner:User.FirstName+&quot; &quot;+Owner:User.LastName,Owner:Queue.QueueName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Owner</label>
    <type>Text</type>
</CustomField>