force-app/main/default/objects/APTS_Agreement__c/fields/APTS_Amendment_formula__c.field-meta.xml
<CustomField>
    <fullName>APTS_Amendment_formula__c</fullName>
    <formula>IF (Text(Original_or_Amendment__c)=&quot;Amendment&quot;, &quot;-Amend&quot;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amendment (formula)</label>
    <type>Text</type>
</CustomField>