force-app/main/default/objects/APTS_Agreement__c/fields/APTS_Approve_for_Release__c.field-meta.xml
<CustomField>
    <fullName>APTS_Approve_for_Release__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approve for Release</label>
    <type>Checkbox</type>
</CustomField>