force-app/main/default/objects/APTS_Agreement__c/fields/APTS_Approved_PO_Attached__c.field-meta.xml
<CustomField>
    <fullName>APTS_Approved_PO_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved PO Attached</label>
    <type>Checkbox</type>
</CustomField>