force-app/main/default/objects/APTS_Agreement__c/fields/APTS_Country__c.field-meta.xml
<CustomField>
    <fullName>APTS_Country__c</fullName>
    <formula>Account__r.BillingCountry</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>