force-app/main/default/objects/APTS_Agreement__c/fields/APTS_CV_Provided__c.field-meta.xml
<CustomField>
    <fullName>APTS_CV_Provided__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Please upload the HCP&apos;s CV to the Agreement Record and check this box when it&apos;s attached. You cannot submit the contract for internal review and approval until the CV is uploaded and this box is check.</inlineHelpText>
    <label>CV Attached</label>
    <type>Checkbox</type>
</CustomField>