force-app/main/default/objects/APTS_Agreement__c/fields/APTS_Evidence_of_HCP_Background_Screenin__c.field-meta.xml
<CustomField>
    <fullName>APTS_Evidence_of_HCP_Background_Screenin__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Background check should be complete before Approval is requested.</inlineHelpText>
    <label>HCP Background Screening Complete</label>
    <type>Checkbox</type>
</CustomField>