force-app/main/default/objects/APTS_Agreement__c/fields/APTS_HCP_Consultant_Contract_Request_For__c.field-meta.xml
<CustomField>
    <fullName>APTS_HCP_Consultant_Contract_Request_For__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HCP Consultant Contract Request Form</label>
    <type>Checkbox</type>
</CustomField>