force-app/main/default/objects/APTS_Agreement__c/fields/APTS_Limitation_Liability_Cap_Consequent__c.field-meta.xml
<CustomField>
    <fullName>APTS_Limitation_Liability_Cap_Consequent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Limitation Liability Cap (Consequential)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>