force-app/main/default/objects/APTS_Agreement__c/fields/APTS_Limitation_Liability_Cap_Direct__c.field-meta.xml
<CustomField>
    <fullName>APTS_Limitation_Liability_Cap_Direct__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Limitation Liability Cap (Direct)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>