force-app/main/default/objects/APTS_Agreement__c/fields/APTS_Maximum_Compensation_Amount__c.field-meta.xml
<CustomField>
    <fullName>APTS_Maximum_Compensation_Amount__c</fullName>
    <label>Maximum Compensation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>