force-app/main/default/objects/APTS_Agreement__c/fields/APTS_Other_Consulting_Services_Hourly__c.field-meta.xml
<CustomField>
    <fullName>APTS_Other_Consulting_Services_Hourly__c</fullName>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>