force-app/main/default/objects/APTS_Agreement__c/fields/APTS_Primary_Nevro_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>APTS_Primary_Nevro_Legal_Entity__c</fullName>
    <label>Primary Nevro Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nevro Corp.</fullName>
            </value>
            <value>
                <fullName>Nevro  Germany GmbH</fullName>
            </value>
            <value>
                <fullName>Nevro Medical Ltd.</fullName>
            </value>
            <value>
                <fullName>Nevro Medical Pty. Ltd.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>