force-app/main/default/objects/APTS_Agreement__c/fields/APTS_Projected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>APTS_Projected_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Projected End Date</label>
    <type>Date</type>
</CustomField>