force-app/main/default/objects/APTS_Agreement__c/fields/APTS_Renewal_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>APTS_Renewal_Notice_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Renewal Notice Date</label>
    <type>Date</type>
</CustomField>