force-app/main/default/objects/APTS_Agreement__c/fields/APTS_Request_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>APTS_Request_DocuSign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request DocuSign</label>
    <type>Checkbox</type>
</CustomField>