force-app/main/default/objects/APTS_Agreement__c/fields/APTS_Send_for_eSignature_BAA__c.field-meta.xml
<CustomField>
    <fullName>APTS_Send_for_eSignature_BAA__c</fullName>
    <description>BAA Agreement Type eSignature button</description>
    <formula>IF(
       RecordType.Name = &quot;Business Associate Agreement&quot;

      &amp;&amp;  APTS_Approve_for_Release__c 
          
  ,

   HYPERLINK(&quot;/apex/Apttus_CMDSign__CMDocuSignCreateEnvelope?id=&quot;&amp;Id, 
   IMAGE(&quot;/resource/Apttus_DocuApi__eSignature&quot;,&quot;Send For eSignatures&quot;), &quot;_self&quot;), 
   &quot;Missing: &quot; &amp; 
    IF(  NOT(APTS_Approve_for_Release__c ) ,&quot;Please Submit for Legal Review and Approval&quot; , NULL) 
)</formula>
    <inlineHelpText>Submit for Legal Review prior to sending for eSignature</inlineHelpText>
    <label>Send for eSignature</label>
    <type>Text</type>
</CustomField>