force-app/main/default/objects/APTS_Agreement__c/fields/APTS_Send_For_Review__c.field-meta.xml
<CustomField>
    <fullName>APTS_Send_For_Review__c</fullName>
    <formula>IF (OR(Workflow_Trigger_Viewed_Final__c = FALSE, Workflow_Trigger_Viewed_Final__c = TRUE),
HYPERLINK(&quot;/apex/SendEmail?id=&quot;&amp;Id &amp; &quot;&amp;action=Send_To_Other_Party_For_Review&quot;, IMAGE(&quot;/resource/Button_SendForReview&quot;, &quot;Send For Review&quot;), &quot;_self&quot;), NULL)</formula>
    <label>Send For Review</label>
    <type>Text</type>
</CustomField>