force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Activated_Date__c.field-meta.xml
<CustomField>
    <fullName>Activated_Date__c</fullName>
    <description>The date the agreement was activated in the system</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Activated Date</label>
    <type>Date</type>
</CustomField>