force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Auto_Renew_Consent__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether consent is required to extend / renew this agreement</description>
    <label>Renewal Consent</label>
    <type>Checkbox</type>
</CustomField>