force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the agreement has an auto renewal provision</description>
    <label>Auto Renew</label>
    <type>Checkbox</type>
</CustomField>