force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Auto_Renewal_Terms__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Terms__c</fullName>
    <description>Specifies any terms for renewal</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Renewal Terms</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>