force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Company_Signed_Title__c.field-meta.xml
<CustomField>
    <fullName>Company_Signed_Title__c</fullName>
    <description>Title of person signing on behalf of Company</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Signed Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>