force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Contract_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Contract_Duration_Days__c</fullName>
    <description>The duration from Start Date to End Date in days</description>
    <formula>IF(AND(ISPICKVAL(Status_Category__c,&quot;In Effect&quot;), (Contract_End_Date__c &gt;= Contract_Start_Date__c)),  (Contract_End_Date__c - Contract_Start_Date__c) + 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Duration (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>