force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>The system assigned unique agreement number.  FOR INTERNAL USE ONLY.  DO NOT SHOW IN SCREENS, REPORTS, ETC.</description>
    <displayFormat>{00000000}</displayFormat>
    <label>Agreement Number_Auto (INTERNAL)</label>
    <type>AutoNumber</type>
</CustomField>