force-app/main/default/objects/APTS_Agreement__c/fields/Apttus__Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>The effective date of the agreement</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Agreement Start Date</label>
    <type>Date</type>
</CustomField>